--- a/_config.yml
+++ b/_config.yml
@@ -5,10 +5,10 @@
 # Site
 title: WOW
 subtitle: '时间就是金钱，我的朋友！'
-description: ''
+description: '写一些平时码code的一点小收货。。。'
 keywords:
 author: yilidan
-language: zh-CN
+language: zh-Hans
 timezone: ''
 
 # URL
