--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ branches:
   only:
     - master # 只监听master分支的push
 script:
+  - hexo clean
   - hexo generate # 自动化构建的脚本
 deploy:
   provider: pages
